chore(run): add JavaFX JVM args to runDesktop and document local run steps